@@ -322,7 +322,8 @@ module ActiveScaffold
           options = {:id => nil, :class => 'as_sort',
                      'data-page-history' => controller_id,
                      :remote => true, :method => :get}
-          url_options = params_for(:action => :index, :page => 1,
+          # :id needed because rails reuse it even if we delete from params (like do_refresh_list does)
+          url_options = params_for(:action => :index, :page => 1, :id => params[:id],
                                    :sort => column.name, :sort_direction => sort_direction)
           unless active_scaffold_config.store_user_settings
             url_options[:search] = search_params if search_params.present?
